--- a/index.html
+++ b/index.html
@@ -9,6 +9,63 @@
 </head>
 
 <body>
+  <img src="images/bg-main-desktop.png" alt="" class="bg-img">
+  <img src="images/bg-main-mobile.png" alt="" class="bg-img-xs">
+
+  <div class="container">
+    <section class="container">
+      <div class="card-front">
+        <img src="images/bg-card-front.png" alt="" class="card-front-img">
+        <img src="images/card-logo.svg" alt="" class="card-logo">
+
+        <p class="card-number-display"> 0000 0000 0000 0000 0000</p>
+        <p class="cardholder-display">Vinicius Almeida</p>
+        <p class="expiry-month-display"></p>
+        <p class="expiry-year-display">0000</p>
+      </div>
+      <div class="card-back">
+        <img src="images/bg-card-back.png" alt="" class="card-back-img">
+        <p class="cvc display">000</p>
+      </div>
+    </section>
+    <section class="card-details">
+      <form action="/action_page.php" id="myForm" name="myForm">
+
+        <label for="cardholder-name">Cardholder Name</label>
+        <input id="cardholder-name" class="cardholder-name" type="text" name="cardholder-name"
+          placeholder="e.g. Vinicius Almeida" oninput="inputName()">
+        <p id="errorMsg"></p>
+
+        <label for="card-number">Card Number</label>
+        <input id="card-number" class="cardh-number" type="text" name="card-number"
+          placeholder="e.g. 1234 5678 9123 0000" oninput="inputCardNum()">
+        <p id="card-num-error"></p>
+
+        <div class="flex">
+          <label for="expiry-date" class="expiry-date">
+            Exp. Date (MM/YY) <br />
+            <input class="expiry" type="text" name="expiry-date" placeholder="MM" oninput="inputMM()">
+            <input class="expiry" type="text" name="expiry-date" placeholder="YYYY" oninput="inputYY()">
+            <p id="expiry-error"></p>
+
+          </label>
+          <label for="cvc" class="cvc">
+            CVC <br />
+            <input type="text" class="cvc" id="cvc" name="cvc" placeholder="e.g. 123" oninput="inputCvc()">
+            <p id="error=cvc"></p>
+          </label>
+        </div>
+      </form>
+    </section>
+  </div>
+  <button id="submit">Confirm</button>
+  </form>
+  <div id="Obrigado" class="Obrigado hidden">
+    <img src="images/icon-complete.svg" alt="">
+    <h2 id="Obrigado-header">Obrigado</h2>
+    <p>Nós Adicionamos os dados do seu cartão</p>
+    <button id="Continue">Continuar</button>
+  </div>
   <script type="module" src="/main.js"></script>
 </body>
 
