--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="images/bg-card-front.png" alt="" class="card-front-img">
         <img src="images/card-logo.svg" alt="" class="card-logo">
 
-        <p class="card-number-display"> 0000 0000 0000 0000 0000</p>
+        <p class="card-number-display">0000 0000 0000 0000 0000</p>
         <p class="cardholder-display">Vinicius Almeida</p>
         <p class="expiry-month-display"></p>
         <p class="expiry-year-display">0000</p>
@@ -33,25 +33,26 @@
 
         <label for="cardholder-name">Cardholder Name</label>
         <input id="cardholder-name" class="cardholder-name" type="text" name="cardholder-name"
-          placeholder="e.g. Vinicius Almeida" oninput="inputName()">
+          placeholder="e.g. Vinicius Almeida" oninput="inputName()" maxlength="50">
         <p id="errorMsg"></p>
 
         <label for="card-number">Card Number</label>
         <input id="card-number" class="cardh-number" type="text" name="card-number"
-          placeholder="e.g. 1234 5678 9123 0000" oninput="inputCardNum()">
+          placeholder="e.g. 1234 5678 9123 0000" oninput="inputCardNum()" maxlength="16">
         <p id="card-num-error"></p>
 
         <div class="flex">
           <label for="expiry-date" class="expiry-date">
             Exp. Date (MM/YY) <br />
-            <input class="expiry" type="text" name="expiry-date" placeholder="MM" oninput="inputMM()">
-            <input class="expiry" type="text" name="expiry-date" placeholder="YYYY" oninput="inputYY()">
+            <input class="expiry" type="text" name="expiry-date" placeholder="MM" oninput="inputMM()" maxlength="2">
+            <input class="expiry" type="text" name="expiry-date" placeholder="YYYY" oninput="inputYY()" maxlength=2>
             <p id="expiry-error"></p>
 
           </label>
           <label for="cvc" class="cvc">
             CVC <br />
-            <input type="text" class="cvc" id="cvc" name="cvc" placeholder="e.g. 123" oninput="inputCvc()">
+            <input type="text" class="cvc" id="cvc" name="cvc" placeholder="e.g. 123" oninput="inputCvc()"
+              maxlength="3">
             <p id="error=cvc"></p>
           </label>
         </div>
