--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./src/css/style.css">
   <title>Interactive Card</title>
 </head>
 
 <body>
-  <img src="images/bg-main-desktop.png" alt="" class="bg-img">
+  <img src="./src/assets/images/bg-main-desktop.png" alt="" class="bg-img">
   <img src="images/bg-main-mobile.png" alt="" class="bg-img-xs">
 
-  <div class="container">
+  <main class="container">
     <section class="container">
       <div class="card-front">
         <img src="images/bg-card-front.png" alt="" class="card-front-img">
@@ -28,8 +29,9 @@
         <p class="cvc display">000</p>
       </div>
     </section>
+
     <section class="card-details">
-      <form action="/action_page.php" id="myForm" name="myForm">
+      <form action="" id="myForm" name="myForm">
 
         <label for="cardholder-name">Cardholder Name</label>
         <input id="cardholder-name" class="cardholder-name" type="text" name="cardholder-name"
@@ -43,31 +45,33 @@
 
         <div class="flex">
           <label for="expiry-date" class="expiry-date">
-            Exp. Date (MM/YY) <br />
-            <input class="expiry" type="text" name="expiry-date" placeholder="MM" oninput="inputMM()" maxlength="2">
-            <input class="expiry" type="text" name="expiry-date" placeholder="YYYY" oninput="inputYY()" maxlength=2>
-            <p id="expiry-error"></p>
+            Exp. Date (MM/YY)
+          </label>
 
-          </label>
-          <label for="cvc" class="cvc">
-            CVC <br />
-            <input type="text" class="cvc" id="cvc" name="cvc" placeholder="e.g. 123" oninput="inputCvc()"
-              maxlength="3">
-            <p id="error=cvc"></p>
-          </label>
+          <input class="expiry" type="text" name="expiry-date" placeholder="MM" oninput="inputMM()" maxlength="2">
+
+          <input class="expiry" type="text" name="expiry-date" placeholder="YY" oninput="inputYY()" maxlength=2>
+          <p id="expiry-error"></p>
+
+          <label for="cvc" class="cvc">CVC</label>
+          <input type="text" class="cvc" id="cvc" name="cvc" placeholder="e.g. 123" oninput="inputCvc()" maxlength="3">
+          <p id="error=cvc"></p>
         </div>
+        <button id="submit">Confirm</button>
       </form>
     </section>
-  </div>
-  <button id="submit">Confirm</button>
-  </form>
-  <div id="Obrigado" class="Obrigado hidden">
+    </form>
+  </main>
+
+  <section id="Obrigado" class="Obrigado hidden">
     <img src="images/icon-complete.svg" alt="">
     <h2 id="Obrigado-header">Obrigado</h2>
     <p>Nós Adicionamos os dados do seu cartão</p>
-    <button id="Continue">Continuar</button>
-  </div>
-  <script type="module" src="/main.js"></script>
+
+    <button id="Continue" type="button">Continuar</button>
+  </section>
+
+  <script type="module" src="./src/js/main.js"></script>
 </body>
 
 </html>
